--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "Rust bindings for Faasm."
 authors = ["Mayeul Fournial <mfournial@outlook.com>"]
 readme = "README.md"
 
-version = "0.1.0"
+version = "0.0.10"
 build = "build.rs"
 edition = "2018"
 license = "Apache-2.0"
@@ -15,4 +15,7 @@ maintenance = { status = "experimental" }
 [dependencies]
 
 [build-dependencies]
-bindgen = "0.53.1"
+bindgen = "0.53"
+flate2 = "1.0"
+reqwest = { version = "0.10", features = ["blocking", "default-tls"], default-features = false }
+tar = "0.4"
